<resources>
    <string name="app_name">AppNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="settings_page">Settings Page</string>
    <string name="back_icon">Back Icon</string>
    <string name="home_page">Home Page</string>
    <string name="setting_image">setting image</string>
    <string name="write_note">Write Note</string>
    <string name="note">Note</string>
    <string name="write_yourself_a_note">Write yourself a note</string>
    <string name="join_now">JOIN NOW</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="send_password">send password</string>
</resources>