<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgetPasswordFragment">

        <TextView
            android:id="@+id/createNewPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="120dp"
            android:layout_marginHorizontal="30dp"/>
        <EditText
            android:id="@+id/eMailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/createNewPasswordTextView"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/enter_e_mail"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/sendPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/eMailEditText"
            android:layout_marginTop="80dp"
            android:text="@string/send_password"
            android:layout_marginHorizontal="120dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>